[package]
name = "ephemeral-rollups-escrow"
version = "0.0.1"
description = "Ephemeral Rollups Bridge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ephemeral_rollups_bridge"

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "1.18.26"
borsh = "1.5.1"
spl-token = "5.0.0"
ephemeral-rollups-sdk = "0.0.7"
