[package]
name = "ephemeral-rollups-bridge"
version = "0.0.1"
description = "Ephemeral Rollups Bridge"
edition = "2021"

[lib]
name = "ephemeral_rollups_bridge"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "1.18.26"
borsh = "1.5.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
ephemeral-rollups-sdk = "0.0.7"
