[package]
name = "ephemeral-rollups-tooling"
version = "0.0.1"
description = "Ephemeral Rollups Tooling"
edition = "2021"

[features]
default = []

[dev-dependencies]
ephemeral-rollups-sdk = "0.0.7"
ephemeral-rollups-wrapper = { path = "../ephemeral-rollups-wrapper" }

async-trait = "0.1.73"

solana-sdk = "1.18.26"
solana_toolbox_endpoint = "0.1.7-solana-1.18.26"

spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.4.2", features = ["no-entrypoint"] }

mpl-bubblegum = { version = "1.4.0" }
spl-merkle-tree-reference = "0.1.0"

borsh = "1.5.1"
tokio = { version = "1.0.0", features = ["macros"] }

anchor-lang = { version = "0.29.0" }
