[package]
name = "ephemeral-rollups-tooling"
version = "0.0.1"
description = "Ephemeral Rollups Tooling"
edition = "2021"

[features]
default = []

[dev-dependencies]
ephemeral-rollups-sdk = "0.0.7"
ephemeral-rollups-wrapper = { path = "../ephemeral-rollups-wrapper" }

solana-sdk = "1.18.26"
solana_toolbox_endpoint = "0.1.13-solana-1.18.26"

spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.4.2", features = ["no-entrypoint"] }
spl-merkle-tree-reference = { version = "0.1.0" }
mpl-bubblegum = { version = "1.4.0" }

borsh = { version = "0.10.4" }
tokio = { version = "1.0.0", features = ["macros"] }
