[package]
name = "ephemeral-rollups-wrap"
version = "0.0.1"
description = "Ephemeral Rollups Wrap"
edition = "2021"

[lib]
name = "ephemeral_rollups_wrap"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "1.18.26"
borsh = "1.5.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
ephemeral-rollups-sdk = "0.0.7"
